--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,231 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
-
+<body></body>
     <div class="container">
 
         <%include header.html%>
 
-        <article class="main-article">
+        <div class="centered-elements">
+            <h1>Projects under construction!</h1>
+            <img src="under-construction.png" alt="Under Construction" style="width:304px;height:228px;">
+        </div>
 
-            <div class="single-div">
-
-                <!-- <h1>My projects under construction</h1> -->
-                <h1 class="centered-text">Meus projetos</h1>
-                  
-                <div class="index">
-                    <h2 class="centered-text">Índice</h2>
-                    <ol>
-                        <li><a href="#this-website">Este Web-site</a></li>
-                        <li><a href="#ai">Inteligência Artificial</a></h2></li>
-                        <ol>
-                            <li><a href="#ai0">FGSumm</a></li>
-                            <li><a href="#ai1">Essay Checker</a></li>
-                            <li><a href="#ai2">Simulator Multiagente</a></li>
-                            <li><a href="#ai3">Experimentos em Machine learning</a></li>    
-                        </ol>
-                    
-                        <li><a href="#se">Engenharia de Software</a></li>
-                        <ol>    
-                            <li>
-                                <a href="#se0">Java Web</a>
-                                <ol>
-                                    <li><a href="#se00">Meu Blog</a></li>
-                                    <li><a href="#se01">Loja Web</a></li>
-                                    <li><a href="#se02">Sistema de Leilões</a></li>
-                                </ol>
-                            </li>
-                                
-                            <li>
-                                <a href="#se1">Desktop Apps</a>
-                                <ol>
-                                    <li><a href="#se10">King's Valley Game</a></li>
-                                    <li><a href="#se11">Smart Integrated Development Environment</a></li>
-                                </ol>
-                            </li>
-
-                            <li>
-                                <a href="#se2">Android Apps</a>
-                                <ol>
-                                    <li><a href="#se20">QRAttendance</a></li>
-                                    <li><a href="#se21">Cheetah</a></li>
-                                    <li><a href="#se22">King's Valley</a></li>
-                                </ol>                            
-                            </li>
-                            
-                        </ol>
-   
-                        <li><a href="#ot">Outros projetos</a></li>
-
-                    </ol>
-                </div>     
-                
-                <ol>
-                    <li class="anchor title-h2" id="this-website" folder><h2 class="title-h2">Este Web-site</h2></li>
-                    <div folder>
-                        <p>
-                            O objetivo desta página é aplicar e demonstrar os conhecimentos obtidos nos meus estudos em diversas tecnologias.
-                            Por esse motivo, foram utilizadas diferentes tecnologias nos diferentes projetos que são ou serão demonstrados aqui.                      
-                        </p>
-                        <h3>Sobre as páginas Home, Projects e CV</h3>
-                        <p>
-                                As páginas Home, Projects e CV do frontend são implementadas sem a utilização de bibliotecas ou frameworks, 
-                                utilizando apenas recursos básicos do desenvolvimento web, como html, css e javascript. Para o seu backend, 
-                                foi utilizado o node runtime para rodar um servidor em javascript responsável por servir as páginas web.  
-                                
-                                Note que em Blog ainda está vazio, pois ainda estão sendo definidas as tecnologias que serão utilizadas
-                                em sua implementação, que deverá ocorrer muito em breve.  
-                        </p><p>
-                                A partir da página Projects, é possível ser redirecionado para projetos específicos que utilizam diferentes 
-                                tipos de tecnologias no frontend e no backend. Você pode verificar da seção de cada projeto, quais foram as 
-                                tecnologias utilizadas, assim como o porquê o como da escolha de cada tecnologia.
-                        </p>
-                        <h3>Infraestrutura</h3>
-                        <p>
-                            Atualmente esta página web e minhas soluções estão hospedadas em um servidor, utilizando diversos Docker 
-                            containers para conciliar de forma escalável e confiável os diversos tipos de tecnologias. Para orquestração
-                            está sendo utilizado Docker compose, devido a simplicidade do projeto. Um servidor NGINX é utilizado para 
-                            implementação de um proxy reverso no sistema.
-
-                            <!-- // TODO image -->
-
-                        </p>
-                    </div>
-                    <li class="anchor title-h2" id="ai" folder><h2 class="title-h2">Inteligência Artificial</h2></li>
-                    <div folder>
-
-                    Se você leu um pouco sobre mim na página principal deste site, você já sabe que meu principal interesse é na área de 
-                    processamento de linguagem natural, que atualmente está fortemente relacionada com inteligência artificial. Tenho interesse
-                    também na teoria de agentes e em técnicas de machine learning. 
-
-                    Nesta seção existe um resumo dos meus projetos e ponteiros para alguns resultados obtidos.
-                    <ol>
-                        <li id="ai0">
-                            FGSumm
-                            <p>
-                                O FGSumm é um sumarizador automático extrativo mono-documento baseado em features que utiliza lógica fuzzy como
-                                mecânismo de decisão. Informações detalhadas e uma versão web experimental podem ser acessadas 
-                                <a href="/fgsumm">aqui</a>. Você também pode acessar detalhes e o código fonte do projeto FGsumm aqui (Github).
-                            </p>
-                        </li>
-                        <li id="ai1">
-                            Essay Checker
-                            <p>
-                                O Essay Checker é um ambiente web para correção textos, em especial redações, que busca analisar e propor soluções
-                                para problemas de redação em nível léxico, sintático, e semântico. Este projeto está em andamento, em breve postarei 
-                                resultados.
-                            </p>
-                        </li>
-
-                        <li id="ai2">Simulator Multiagente</li>
-                        <li id="ai3">Experimentos em Machine learning</li>
-
-                    </ol>
-                    </div>
-                    <li class="anchor title-h2" id="se" folder><h2 class="title-h2">Software engineering</h2></li>
-                    <div folder>
-                        <ol>    
-                            <li id="se0">Java Web
-                                <ol>
-                                    <li id="se00">
-                                        Meu Blog
-                                        <p>
-                                            Implementaçãode um blog com funcionalidades básicas, como visualização, criação, edição e remoção
-                                            de posts, com controle de usuários por autenticação. Neste projeto são utilizados Spring Boot,
-                                            Spring MVC, Spring Authentication, JPA (Java Persistence API) e MYSQL.
-                                        </p>
-                                    </li>
-                                    <li id="se01">
-                                        Loja Web
-                                        <p>
-                                            A ideia deste projeto é desenvolver uma loja Web em Java. O objetivo é, ao fim do projeto, ter as 
-                                            funcionalidas básicas de uma loja web qualquer, como listagens de produtos, carrinho de compras, 
-                                            login de usuários e gerênciamento de produtos do site.
-                                        </p>
-                                        <p>
-                                            A versão atual do sistema implementa o gerenciamento de produtos. Para isso foram utilizadas 
-                                            as tecnologias JSF (Java Server Faces), Primefaces, Hibernate, MySql. O código fonte pode ser 
-                                            conferido aqui (Github) e uma versão online do sistema pode ser acessado 
-                                            <a href="/store-system" target="_blank">aqui</a>. A versão online pode demorar a carregar, devido
-                                            a limitações do servidor utilizado.        
-                                        </p>
-                                    </li>
-                                    <li id="se02">
-                                        Sistema de Leilões
-                                        <p>
-                                            Sistema ainda em fase de projeto. A ideia é criar um sistema para gerenciar uma série de leilões.
-                                            Usuários premium podem criar, editar e remover leilões, além de poderem realizar lances. Os demais
-                                            usuários podem apenas realizar lances.  
-                                        </p>
-                                    </li>
-                                </ol>
-                            </li>
-                            <li id="se1">Desktop Apps
-                                <ol>
-                                    <li id="se10">King's Valley</li>
-                                    <li id="se11">Gerenciador de arquivos</li>
-                                    <li id="se12">Smart Integrated Development Environment</li>
-                                </ol>
-                            </li>
-                            <li id="se2">Android Apps
-                                <ol>
-                                    <li id="se20">
-                                        QRAttendance
-                                    </li>
-                                    <li id="se21">
-                                        Cheetah
-                                    </li>
-                                    <li id="se22">
-                                        King's Valley
-                                    </li>
-                                </ol>
-                            </li>
-                        </ol>
-                    </div>
-                    <li class="anchor title-h2" id="ot" folder><h2 class="title-h2">Outras projetos</h2></li>
-                    <div folder>
-                        <ol>
-                            <li id="ot0"> 
-                                Script de configuração do Vim - <a href="https://github.com/jovanibrasil/dot-files" target="_blank">aqui</a> 
-                            </li> 
-                            <li id="ot1">   
-                                Sniffer em C - <a href="https://github.com/jovanibrasil/sniffer" target="_blank">aqui</a>
-                            </li>     
-                            <li id="ot2"> 
-                                Um breve estudo sobre a série numérica de Thue Morse e os fractais de Koch 
-                                <a href="https://github.com/jovanibrasil/thue-morse" target="_blank">aqui</a>
-                            </li>     
-                            <li id="ot3"> 
-                                Mínimos quadrados para aproximação de tons de cinza
-                                <a href="https://github.com/jovanibrasil/fit-lqm" target="_blank">aqui</a>
-                            </li>     
-                            <li id="ot4"> 
-                                Implemetação dos modelos divisão e conquista, mestre-escravo e híbrido utilizando MPI e OpenMP
-                                <a href="https://github.com/jovanibrasil/parallel-world" target="_blank">aqui</a>
-                            </li>     
-                            <li id="ot5"> 
-                                Implementação de um game single player com uma arquitetura cliente-servidor utilizando Socket Raw
-                                <a href="https://github.com/jovanibrasil/net-game" target="_blank">aqui</a>
-                            </li>     
-                        </ol>
-                    </div>
-                </ol>  
-            </div>
-
-        </article>
     </div>
-
 </html>
 
-<script>
-    document.querySelectorAll('[folder]').forEach(folder => {
-        folder.onclick = function(e){
-            //debugger
-            const ul = folder.nextElementSibling
-            //console.log(ul)
-            const d = ul.style.display
-            ul.style.display = d === 'none' ? 'block' : 'none'
-        }
-    })
-</script>
+<script></script>
