Add home and cv pages implementation

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,10 @@
-<p>
-  projects works!
-</p>
+<div class="container">
+
+    <%include header.html%>
+
+    <div class="centered-elements">
+        <h1>Projects under construction!</h1>
+        <img src="under-construction.png" alt="Under Construction" style="width:304px;height:228px;">
+    </div>
+
+</div>
