--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,63 @@
-<p>
-  home works!
-</p>
+<div class="container-fluid">
+
+    <div class="row" style="display: flex; flex-direction: column;">
+
+            <div class="aligner">
+                <div class="left-menu item-aligner" style="text-align: center; ">
+        
+                        <img class="circular" src="/assets/img/me.jpg" alt="Jovani Brasil" height="200px">
+                        
+                        <div class="in-line center">
+                            <a href="https://github.com/jovanibrasil" title="Github">
+                                <i class="fa fa-github" style="font-size:32px; color: #000; "></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/jovanibrasil" title="Linkedin">
+                                <i class="fa fa-linkedin" style="font-size:32px; color: #000;"></i>
+                            </a>
+                            <a href="" title="Google Scholar">
+                                <i class="fa fa-graduation-cap" style="font-size:30px; color: #000;"></i>
+                            </a>
+                            <a href="" title="Lattes">
+                                <img src="/assets/img/lattes-icon.png" height="26px" style="color: #000;"/>
+                            </a>
+                        </div>
+                        
+                        <div >
+                            <i class="fa fa-phone"  title="Phone" style="font-size:16px; color: #000;">+55 (51) 993585599</i><br/>
+                            <i class="fa fa-envelope"  title="Email" style="font-size:16px; color: #000;"> jovanibrasil@gmail.com </i>
+                        </div>
+                        
+                    </div>
+            </div>
+            
+
+            <div class="aligner">
+               <article class="text-container item-aligner">
+                    <p>Olá, seja bem vindo(a) a minha página pessoal!</p>
+                    <p>
+                    Meu nome é Jovani Brasil, sou estudante de ciência da computação na Pontifícia Universidade Católica 
+                    do Rio Grande do Sul e atualmente estou me preparando para começar a trabalhar como desenvolvedor de software. 
+                    Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
+                    e machine learning. Tenho interesse nas mais diversas técnologias e gosto de estar sempre me atualizando. 
+                    Sou apaixonado pela educação à distância, sendo fã de plataformas como 
+                    <a href="https://www.coursera.org/">Coursera</a>, <a href="https://www.udemy.com/">Udemy</a> 
+                    e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>. 
+                    Caso necessário, sinta-se à vontade para entrar em contato comigo. 
+                    Você também pode visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
+                    </p>
+                    <p>
+                    A ideia desta página é concentrar meus projetos, ideias e currículo, também servindo como objeto de aprendizagem,
+                    uma vez que tudo que foi e que será implementado aqui são resultados obtidos dos meus estudos de diversas tecnologias, 
+                    tanto no frontend quanto no backend. Para mais detalhes sobre as implementações, 
+                    consulte meus  <a href="/Projects">projetos</a>. 
+                    </p>
+                    <p>
+                    Esta página e meus projetos estão todos em desenvolvimento, então sugestões de melhorias e notificação de erros são bem 
+                    vindas para o processo de construção das soluções. 
+                    </p>  
+               </article>
+            </div>
+    
+    </div>
+
+</div>
