Add projects and blog content
- Also adjust some layout problems

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,4 +1,4 @@
-    <div class="row" style="display: flex; flex-direction: column;">
+<div class="row" style="display: flex; flex-direction: column;">
         <article class="aligner">
             <div class="text-container">
                 <h3>Currículo</h3>
@@ -22,8 +22,8 @@
         
                 <p>Atualmente estou em busca de um emprego como programador JAVA, sendo que me sinto capaz de atuar
                 na parte Web, desktop ou mobile. Tenho domínio satisfatório das linguagens JAVA, Python, C, e JavaScript. Em relação as
-                variadas tecnologias que tenho utilizado ultimamente, posso destacar Servlets, JSP, JPA, JSF, Primefaces, Hibernate, Maven, 
-                Node, Nginx, Gulp, JUnit e Solr.</p>
+                variadas tecnologias que tenho utilizado ultimamente, posso destacar Servlets, JSP, JPA, JSF, Primefaces, Spring, Hibernate, 
+                Maven, Node, Nginx, Gulp, JUnit e Solr.</p>
         
                 <p>Para mais informações sobre mim, você pode me mandar um email (jovanibrasil@gmail.com), ou dar uma olhada em meus projetos,
                 ainda e baixar meu currículo, logo abaixo.</p>
@@ -31,7 +31,6 @@
                 <h5>Download (Currículo completo)</h5>
         
                 Meu currículo completo pode ser baixado em PDF <a href="/assets/jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
-        
             </div>    
         </article>
     </div>
