--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,9 @@
     <div class="row" style="display: flex; flex-direction: column;">
 
             <div class="aligner">
-                <div class="left-menu item-aligner" style="text-align: center; ">
+                <div class="item-aligner" style="text-align: center; margin: 30px 0px">
         
-                        <img class="circular" src="/assets/img/me.jpg" alt="Jovani Brasil" height="200px">
+                        <img class="circular" src="/assets/img/me.jpg" alt="Jovani Brasil" height="220px">
                         
                         <div class="in-line center">
                             <a href="https://github.com/jovanibrasil" title="Github">
