--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,12 @@
-<p>
-  blog works!
-</p>
+<div class="row" style="display: flex; flex-direction: column;">
+    <article class="aligner">
+        <div class="text-container">
+            <p>
+                Meu blog está atualmente em desenvolvivento. Em breve, quando eu terminá-lo, começarei a postar sobre diversos assuntos
+                dentro do mundo do desenvolvimento de software e inteligência artificial. Aqui você pode conferir o estado atual da 
+                implementação e realizar o registro para receber atualizações do projeto.  
+            </p>
+            
+        </div>    
+    </article>
+</div>
