--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,114 @@
-<div class="container">
-
-    <%include header.html%>
-
-    <div class="centered-elements">
-        <h1>Projects under construction!</h1>
-        <img src="under-construction.png" alt="Under Construction" style="width:304px;height:228px;">
+<div class="row" style="display: flex; flex-direction: column;">
+    <div class="aligner">
+        <article class="text-container item-aligner">
+               <p>
+                    Aqui estão listados os projetos que venho desenvolvendo nos últimos meses. No desenvolvimento dos meus projetos 
+                    estão sendo utilizadas diversas tecnologias com alta demanda na indústria de desenvolvimento de software. 
+               </p>
+               <p>
+                    No que se refere a projetos web, que é o meu foco atual, no frontend estou majoritariamente utilizando Angular e Bootstrap, 
+                    e recentemente comecei um projeto com React. Já no backend estou utilizado JAVA com Spring Framework na maioria dos 
+                    projetos, porém também recentemente iniciei um projeto utilizando Node e Express. No tocante a banco de dados, são 
+                    utilizados os bancos MySQL e MongoDB. Nos projetos desktop tenho utilizado Python e Java SE, Python quando se refere a 
+                    análise de dados, e Java para os demais tipos de aplicações. Utilizo o Github como repositório dos projetos e um servidor 
+                    na AWS (configurado do zero) para rodar os projetos com com toda uma infra de containers usando Docker. Para integração 
+                    e deploy das aplicações com um bom grau de automação, tenho utilizado Jenkins. 
+               </p>
+               <p>
+                    A ideia é com o tempo ir especificando melhor os detalhes de cada um dos projetos e compartilhar esse conhecimento por
+                    meio do meu blog e do meu futuro canal no Youtube. 
+               </p>
+               <p>
+                    Lembre-se, qualquer dúvida, sugestão, conselho ou reclamação, fique a vontade para me enviar um email.
+               </p>
+        </article>
     </div>
-
+    <div class="aligner">
+        <div class="item-aligner" id="accordion">
+            <div class="card">
+                <div class="card-header" id="blogCardHead">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#blogCardContent" 
+                            aria-expanded="false" aria-controls="blogCardContent">Blog</button>
+                    </h5>
+                </div>
+            
+                <div id="blogCardContent" class="collapse" aria-labelledby="blogCardHead" data-parent="#accordion">
+                    <div class="card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, 
+                        non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua 
+                        put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore 
+                        wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="notesCardHead">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#notesCardContent" 
+                            aria-expanded="false" aria-controls="notesCardContent">
+                        Aplicativo de lembretes
+                        </button>
+                    </h5>
+                </div>
+                <div id="notesCardContent" class="collapse" aria-labelledby="notesCardHead" data-parent="#accordion">
+                    <div class="card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, 
+                        non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put 
+                        a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
+                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
+                        raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="kvCardHead">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#kvCardContent" 
+                            aria-expanded="false" aria-controls="kvCardContent">
+                        Kings Valley Game
+                        </button>
+                    </h5>
+                </div>
+                <div id="kvCardContent" class="collapse" aria-labelledby="kvCardHead" data-parent="#accordion">
+                    <div class="card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, 
+                        non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua 
+                        put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore
+                        wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="summHeadContent">
+                    <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#summCardContent" aria-expanded="true" aria-controls="summCardContent">
+                        Sumarizador de textos
+                    </button>
+                    </h5>
+                </div>
+                <div id="summCardContent" class="collapse" aria-labelledby="summHeadContent" data-parent="#accordion">
+                    <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="ideCardHead">
+                    <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#ideCardContent" aria-expanded="false" aria-controls="ideCardContent">
+                        Smart IDE
+                    </button>
+                    </h5>
+                </div>
+                <div id="ideCardContent" class="collapse" aria-labelledby="ideCardHead" data-parent="#accordion">
+                    <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
