Add projects description
Add description to notes, blog and text summarizer projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -16,10 +16,8 @@
                </p>
                <p>
                     A ideia é com o tempo ir especificando melhor os detalhes de cada um dos projetos e compartilhar esse conhecimento por
-                    meio do meu blog e do meu futuro canal no Youtube. 
-               </p>
-               <p>
-                    Lembre-se, qualquer dúvida, sugestão, conselho ou reclamação, fique a vontade para me enviar um email.
+                    meio do meu blog e do meu futuro canal no Youtube. Também em um futuro próximo produzirei alguns cursos explicando o
+                    passo a passo para desenvolvimento das minhas aplicações. 
                </p>
         </article>
     </div>
@@ -32,14 +30,16 @@
                             aria-expanded="false" aria-controls="blogCardContent">Blog</button>
                     </h5>
                 </div>
-            
                 <div id="blogCardContent" class="collapse" aria-labelledby="blogCardHead" data-parent="#accordion">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, 
-                        non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua 
-                        put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore 
-                        wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        <p>
+                            A proposta do blog é compartilhar meu conhecimento com outros desenvolvedores. A ideia é focar nos assuntos de meu interesse, como 
+                            engenharia de software, inteligência artificial e infraestrutura. O blog pode ser acessado <a href="https://blog.jovanibrasil.com/">aqui</a>. 
+                        </p>
+                        <p>
+                            Meu blog foi implementado do zero utilizando Angular 7 e Bootstrap 4 no frontend, Java (Spring) e MySQL no backend. Em breve disponibilizarei 
+                            o link para o repositório do código fonte do projeto.        
+                        </p>
                     </div>
                 </div>
             </div>
@@ -53,15 +53,43 @@
                     </h5>
                 </div>
                 <div id="notesCardContent" class="collapse" aria-labelledby="notesCardHead" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, 
-                        non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put 
-                        a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                        raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div class="card-body">        
+                        <p>
+                            Aplicativo que permite a criação de notas organizadas por cadernos. A ideia é ter um ambiente voltado para organização de tarefas, onde é 
+                            possível gerenciar todas as atividade de maneira eficiente e eficaz, permitindo planejamento de tarefas.  O aplicativo de notas pode ser 
+                            acessado <a href="https://notes.jovanibrasil.com/">aqui</a>.         
+                        </p>
+                        <p>
+                            O aplicativo de notas foi implementado do zero utilizando Angular 7 e Bootstrap 4 no frontend, Java (Spring) e MongoDB no backend. Em breve 
+                            disponibilizarei o link para o repositório do código fonte do projeto. 
+                        </p>
                     </div>
                 </div>
             </div>
+            <div class="card">
+                    <div class="card-header" id="summHeadContent">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#summCardContent" aria-expanded="true" aria-controls="summCardContent">
+                            Sumarizador de textos
+                        </button>
+                        </h5>
+                    </div>
+                    <div id="summCardContent" class="collapse" aria-labelledby="summHeadContent" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>
+                                O Summ-Tool é uma ferramenta para sumarização de textos em português utilizando abordagem extrativa. Nesta ferramenta estão implementadas 
+                                diversas opções de pré-processamento, como segmentação e normalização de textos, POS (Part-Of-Speech Tagger) e NER (Named entity recognition). 
+                                Também são disponibilizadas diversas opções de features para análise do texto. Como mecanismo de tomada de decisão é possível utilizar lógica 
+                                fuzzy, algoritmos genéticos e em breve redes neurais.        
+                            </p>                                  
+                            <p>
+                                O Summ-Tool foi implementado utilizando Java. Bibliotecas como  <a href="https://blog.jovanibrasil.com/">Apache OpenNLP</a>, 
+                                <a href="https://github.com/kavgan/ROUGE-2.0">Java ROUGE 2.0</a> e <a href="http://jfuzzylogic.sourceforge.net/html/index.html">jFuzzyLogic</a> 
+                                foram utilizadas. Em breve disponibilizarei o link para o repositório do código fonte do projeto.       
+                            </p>
+                        </div>
+                    </div>
+                </div>
             <div class="card">
                 <div class="card-header" id="kvCardHead">
                     <h5 class="mb-0">
@@ -73,25 +101,7 @@
                 </div>
                 <div id="kvCardContent" class="collapse" aria-labelledby="kvCardHead" data-parent="#accordion">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, 
-                        non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua 
-                        put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore
-                        wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="summHeadContent">
-                    <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#summCardContent" aria-expanded="true" aria-controls="summCardContent">
-                        Sumarizador de textos
-                    </button>
-                    </h5>
-                </div>
-                <div id="summCardContent" class="collapse" aria-labelledby="summHeadContent" data-parent="#accordion">
-                    <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        <!-- TODO description -->
                     </div>
                 </div>
             </div>
@@ -99,16 +109,26 @@
                 <div class="card-header" id="ideCardHead">
                     <h5 class="mb-0">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#ideCardContent" aria-expanded="false" aria-controls="ideCardContent">
-                        Smart IDE
+                        Infraestrutura
                     </button>
                     </h5>
                 </div>
                 <div id="ideCardContent" class="collapse" aria-labelledby="ideCardHead" data-parent="#accordion">
                     <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    
+                        <!-- TODO description -->
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="aligner">
+        <article class="text-container item-aligner">
+            <p>
+                Lembre-se, qualquer dúvida, sugestão, conselho ou reclamação, fique a vontade para me enviar um email.
+           </p>
+    </article>
+</div>
+
 </div>
