Fix typos and add jenkinsfile

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,10 +2,17 @@
     <article class="aligner">
         <div class="text-container">
             <p>
-                Meu blog está atualmente em desenvolvivento. Em breve, quando eu terminá-lo, começarei a postar sobre diversos assuntos
-                dentro do mundo do desenvolvimento de software e inteligência artificial. Aqui você pode conferir o estado atual da 
-                implementação e realizar o registro para receber atualizações do projeto.  
+                Meu blog está atualmente em desenvolvivento e pode ser acessado <a href="https://blog.jovanibrasil.com/">aqui</a>. 
+                Em breve, quando eu terminá-lo, começarei a postar sobre diversos assuntos dentro do mundo do 
+                desenvolvimento de software e inteligência artificial. Aqui você pode conferir o estado atual da 
+                implementação e verificar atualizações do projeto.  
             </p>
+            <ul>
+                <li>
+                    <i class="fa fa-bell"></i>
+                    16/03/2019 - Primeira versão estável, porém ainda o mecânimo de busca não está funcionando.
+                </li>
+            </ul>
         </div>    
     </article>
 </div>
