--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -6,7 +6,7 @@
                 <h5>Jovani Brasil (Resumido)</h5>
         
                 <p>Olá, Meu nome é Jovani Brasil, tenho 26 anos de idade e atualmente moro em São Jerônimo, Rio Grande do Sul. Sou formando
-                em Ciência da Computação da PUCRS e atualmente estou focado em duas coisas: meus projetos e arrumar um emprego.</p>
+                em Ciência da Computação da PUCRS.</p>
         
                 <p>Posso dizer que todas as minhas experiências foram dentro da universidade. Em 2012 entrei no Programa de educação
                 tutorial da PUCRS (PET-PUCRS), onde desempenhei iniciação ciêntifica, tendo oportunidade de trabalhar junto a professores
@@ -20,12 +20,11 @@
                 disciplinas. Em especial, engenheria de software e inteligência artificial tem sido as áreas que tiveram atenção especial 
                 nos últimos meses, sendo que amo ambas as áreas e considero de extrema valia para a computação.</p>
         
-                <p>Atualmente estou em busca de um emprego como programador JAVA, sendo que me sinto capaz de atuar
-                na parte Web, desktop ou mobile. Tenho domínio satisfatório das linguagens JAVA, Python, C, e JavaScript. Em relação as
-                variadas tecnologias que tenho utilizado ultimamente, posso destacar Servlets, JSP, JPA, JSF, Primefaces, Spring, Hibernate, 
-                Maven, Node, Nginx, Gulp, JUnit e Solr.</p>
+                <p>Atualmente estou focado no estudo de diversas tecnologias com alta demanda na indústria, como as linguagens 
+                    JAVA, Python, C, e JavaScript, utilizando diversas tecnologias como Servlets, 
+                 JSP, JPA, JSF, Primefaces, Spring, Hibernate, Maven, Node, Nginx, Docker, Jenkins, JUnit e Solr.</p>
         
-                <p>Para mais informações sobre mim, você pode me mandar um email (jovanibrasil@gmail.com), ou dar uma olhada em meus projetos,
+                <p>Para mais informações sobre a minha pessoa, você pode me mandar um email (jovanibrasil@gmail.com), ou dar uma olhada em meus projetos,
                 ainda e baixar meu currículo, logo abaixo.</p>
         
                 <h5>Download (Currículo completo)</h5>
