--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-    <div class="row" style="display: flex; flex-direction: column;">
+    <div class="row" style="display: flex; flex-direction: column; margin-bottom: 40px;">
 
             <div class="aligner">
                 <div class="item-aligner" style="text-align: center; margin: 30px 0px">
@@ -36,9 +36,8 @@
                     <p>Olá, seja bem vindo(a) a minha página pessoal!</p>
                     <p>
                     Meu nome é Jovani Brasil, sou estudante de ciência da computação na Pontifícia Universidade Católica 
-                    do Rio Grande do Sul e atualmente estou me preparando para começar a trabalhar como desenvolvedor de software. 
-                    Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
-                    e machine learning. Tenho interesse nas mais diversas técnologias e gosto de estar sempre me atualizando. 
+                    do Rio Grande do Sul. Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
+                    e machine learning. Tenho interesse nas mais diversas tecnologias e gosto de estar sempre me atualizando. 
                     Sou apaixonado pela educação à distância, sendo fã de plataformas como 
                     <a href="https://www.coursera.org/">Coursera</a>, <a href="https://www.udemy.com/">Udemy</a> 
                     e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>. 
@@ -46,13 +45,11 @@
                     Você também pode visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
                     </p>
                     <p>
-                    A ideia desta página é concentrar meus projetos, ideias e currículo, também servindo como objeto de aprendizagem,
-                    uma vez que tudo que foi e que será implementado aqui são resultados obtidos dos meus estudos de diversas tecnologias, 
-                    tanto no frontend quanto no backend. Para mais detalhes sobre as implementações, 
-                    consulte meus  <a href="/Projects">projetos</a>. 
+                    A ideia desta página é concentrar meus projetos, ideias e currículo. Em especial, visite meus
+                    <a href="/Projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos.  
                     </p>
                     <p>
-                    Esta página e meus projetos estão todos em desenvolvimento, então sugestões de melhorias e notificação de erros são bem 
+                    Esta página e meus projetos estão todos em desenvolvimento, então sugestões de melhorias e notificações de erros são bem 
                     vindas para o processo de construção das soluções. 
                     </p>  
                </article>
