--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,7 +11,7 @@
                     projetos, porém também recentemente iniciei um projeto utilizando Node e Express. No tocante a banco de dados, são 
                     utilizados os bancos MySQL e MongoDB. Nos projetos desktop tenho utilizado Python e Java SE, Python quando se refere a 
                     análise de dados, e Java para os demais tipos de aplicações. Utilizo o Github como repositório dos projetos e um servidor 
-                    na AWS (configurado do zero) para rodar os projetos com com toda uma infra de containers usando Docker. Para integração 
+                    na AWS (configurado do zero) para rodar os projetos com toda a infra de containers Docker. Para integração 
                     e deploy das aplicações com um bom grau de automação, tenho utilizado Jenkins. 
                </p>
                <p>
@@ -23,6 +23,7 @@
     </div>
     <div class="aligner">
         <div class="item-aligner" id="accordion">
+            <!-- Blog app -->
             <div class="card">
                 <div class="card-header" id="blogCardHead">
                     <h5 class="mb-0">
@@ -43,6 +44,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Notes app -->
             <div class="card">
                 <div class="card-header" id="notesCardHead">
                     <h5 class="mb-0">
@@ -66,6 +68,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Summarization Tool app -->
             <div class="card">
                     <div class="card-header" id="summHeadContent">
                         <h5 class="mb-0">
@@ -89,7 +92,8 @@
                             </p>
                         </div>
                     </div>
-                </div>
+            </div>
+            <!-- Kings Valley App -->
             <div class="card">
                 <div class="card-header" id="kvCardHead">
                     <h5 class="mb-0">
@@ -101,23 +105,15 @@
                 </div>
                 <div id="kvCardContent" class="collapse" aria-labelledby="kvCardHead" data-parent="#accordion">
                     <div class="card-body">
-                        <!-- TODO description -->
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="ideCardHead">
-                    <h5 class="mb-0">
-                    <button class="btn btn-link" data-toggle="collapse" data-target="#ideCardContent" aria-expanded="false" aria-controls="ideCardContent">
-                        Infraestrutura
-                    </button>
-                    </h5>
-                </div>
-                <div id="ideCardContent" class="collapse" aria-labelledby="ideCardHead" data-parent="#accordion">
-                    <div class="card-body">
-                    
-                        <!-- TODO description -->
-
+                        <p>
+                            Kings Valley é um jogo de tabuleiro em que um jogador ganha quando ocupa o centro do tabuleiro
+                            com o seu rei, ou então impossibilita o oponente de realizar qualquer movimento. Mais detalhes
+                            poderão ser obtidos na descrição do repositório do projeto e no menu de ajuda do cliente do jogo.
+                        </p>
+                        <p>
+                            O Kings Valley está sendo implementado utilizando Java, tanto para o cliente para Desktop quanto 
+                            para a API remota. Em breve disponibilizarei o link para o repositório do código fonte do projeto.       
+                        </p>
                     </div>
                 </div>
             </div>
